Add initial project structure with CMake configuration, license, and essential files
- Created CMakeLists.txt for project setup and dependencies.
- Added LICENSE file for project licensing.
- Updated .gitignore to include important files like LICENSE and README.
- Introduced DBoW2 and Sophus libraries with their respective CMake configurations.
- Included g2o library setup and example/test directories for Sophus.
- Added initial vocabulary file for ORBvoc.

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@
 # Unignore all dirs
 !*/
 
-CMakeLists.txt.user
+# Unignore important files without extensions
+!LICENSE
+!README
+
 CMakeLists_modified.txt
 
 Examples/RGB-D/rgbd_tum
@@ -37,15 +40,7 @@ Thirdparty/g2o/lib/
 Vocabulary/ORBvoc.txt
 build/
 *.txt
-*.tgz
-*.tar.gz
-*.tar
-*.gz
-*.zip
-*.7z
-*.rar
-*.iso
-*.dmg
+!CMakeLists.txt
 
 lib/
 
